--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@ body {
 }
 
 h1 {
+  margin:0px;
+
   font-family: "Germania One", system-ui;
   font-weight: 400;
   font-style: normal;
@@ -16,9 +18,23 @@ h1 {
 }
 
 h2, h3, h4, h5, h6 {
+  margin-bottom: 0px;
+  margin-top: 1em;
+
   font-family: "Merriweather", serif;
+  font-weight: 600;
+  font-style: normal;
+}
+
+p {
+  margin-top: 0.5em;
+
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
 }
 
 .nav_element {
