--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,26 @@
 .main-paper {
   max-width: 40em;
-  background-color: #fff;
+  background-color: #fffb;
   margin-left: auto;
   margin-right: auto;
   font-family: toshibatx;
-  padding: 2.5em;
   padding-top: 1em;
+  padding-bottom: 2.5em;
+  padding-left: min(2.5em, 6.25%);
+  padding-right: min(2.5em, 6.25%);
 }
 
 html, body {
   margin: 0;
   height: 100%;
+}
+
+body {
+  background-image: url("/assets/img/redsky.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
 }
 
 h1 {
