--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,46 @@
+[data-theme="light"] {
+  --color-bg: #fff;
+  --color-bg-faint: #fffb;
+  --color-fg: #000;
+  --color-accent: #900;
+  --color-accent-faint: #9339;
+
+  & .light-icon {
+    display: block;
+  }
+  & .dark-icon {
+    display: none;
+  }
+}
+
+[data-theme="dark"] {
+  --color-bg-faint: #000b;
+  --color-fg: #fff;
+  --color-accent: #f66;
+  --color-accent-faint: #f779;
+
+  & .light-icon {
+    display: none;
+  }
+  & .dark-icon {
+    display: block;
+  }
+}
+
+[data-theme-toggle] {
+  width: 24px;
+  height: 24px;
+  padding: 0px;
+  border: 0px;
+  background-color: #0000;
+  color: var(--color-fg);
+  float: right
+}
+
 .main-paper {
   max-width: 40em;
-  background-color: #fffb;
+  background-color: var(--color-bg-faint);
+  color: var(--color-fg);
   margin-left: auto;
   margin-right: auto;
   font-family: toshibatx;
@@ -26,7 +66,7 @@ body {
 h1 {
   font-size: 3em;
   margin-bottom: 0.25em;
-  text-shadow: 0.0625em 0.0625em #9339;
+  text-shadow: 0.0625em 0.0625em var(--color-accent-faint);
 }
 
 h2 {
@@ -48,12 +88,8 @@ ul {
   margin-top: 0.25em;
 }
 
-body {
-  background-color: #eee;
-}
-
 a {
-  color: #933;
+  color: var(--color-accent);
   font-weight: bold;
   text-decoration-thickness: calc(1em / 8);
 }
@@ -69,8 +105,8 @@ a {
 }
 
 .inverted {
-  background-color: #933;
-  color: #fff;
+  background-color: var(--color-accent);
+  color: var(--color-bg);
   font-weight: bold;
 }
 
@@ -86,7 +122,7 @@ a {
 }
 
 table, th, td {
-  border: 1px solid black;
+  border: 1px solid var(--color-fg);
   border-collapse: collapse;
   text-align: center;
 }
