--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -185,5 +185,18 @@ hr {
 }
 
 p code.hljs {
-  padding:2px 4px 2px 4px;
+  padding:1px 4px 1px 4px;
+}
+
+li code.hljs {
+  padding:1px 4px 1px 4px;
+}
+
+ul {
+  list-style-type: "* ";
+  padding-left: 1.5em;
+}
+
+li {
+  margin-bottom: 0.5em;
 }
