--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,12 +38,54 @@
 
 [data-theme-toggle] {
   width: 24px;
+  margin-left:6px;
+  margin-right:6px;
   height: 24px;
   padding: 0px;
   border: 0px;
   background-color: #0000;
   color: var(--color-fg);
-  float: right
+  float: right;
+}
+
+[data-lang="en"] {
+  & .en-icon {
+    display: block;
+  }
+  & .tp-icon {
+    display: none;
+  }
+  & .tp {
+    display: none;
+  }
+}
+
+[data-lang="tp"] {
+  & .en-icon {
+    display: none;
+  }
+  & .tp-icon {
+    display: block;
+    font-family: fairfax;
+  }
+  & .en {
+    display: none;
+  }
+}
+
+[data-lang-toggle] {
+  width: 24px;
+  margin-left:6px;
+  margin-right:6px;
+  height: 24px;
+  padding: 0px;
+  border: 0px;
+  background-color: #0000;
+  color: var(--color-fg);
+  float: right;
+  font-family: fairfax;
+  font-size: 24px;
+  line-height: 0;
 }
 
 .main-paper {
@@ -128,6 +170,26 @@ a {
   font-family: "toshibatx";
   src: url("/assets/fonts/WebPlus_ToshibaTxL1_8x16.woff") format('woff');
   font-weight: bold;
+}
+
+@font-face {
+  font-family: "fairfax";
+  src: url("/assets/fonts/Fairfax.ttf") format('truetype');
+}
+
+@font-face {
+  font-family: "nasin-nanpa";
+  src: url("/assets/fonts/nasin-nanpa-4.0.2.otf") format('opentype');
+}
+
+.sitelen-pona {
+  font-family: nasin-nanpa;
+  a {
+    text-decoration: none;
+  }
+  ul {
+    list-style-type: "\F199C"
+  }
 }
 
 table, th, td {
