clock: handle polar regions better

--- a/clock/style.css
+++ b/clock/style.css
@@ -208,10 +208,12 @@ body {
 
 #spoke-midday {
     stroke: #dea363;
+    stroke-width: 0.75px;
 }
 
 #spoke-midnight {
     stroke: #dea363;
+    stroke-width: 0.75px;
 }
 
 .moon-frame {
