--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,26 @@
+@font-face {
+  font-family: "fluorine";
+  src: url("/assets/fonts/FluorineMicro.ttf") format('truetype');
+}
+
+@font-face {
+  font-family: "kiwisoda";
+  src: url("/assets/fonts/KiwiSoda.ttf") format('truetype');
+}
+
+@font-face {
+  font-family: "cozette";
+  src: url("/assets/fonts/CozetteVector.otf") format('opentype');
+}
+
+@font-face {
+  font-family: "lekomajuna";
+  src: url("/assets/fonts/leko majuna sin.ttf") format('truetype');
+}
+
 :root {
   --color-bg: #fee;
-  --color-bg-faint: #feed;
+  --color-bg-faint: #fee;/*d;*/
   --color-raised: #dcc;
   --color-fg: #000;
   --color-fg-faint: #000d;
@@ -11,16 +31,14 @@
 }
 
 .main-paper {
-  max-width: 40em;
+  max-width: 620px;
   background-color: var(--color-bg-faint);
   color: var(--color-fg);
   margin-left: auto;
   margin-right: auto;
-  font-family: toshibatx;
-  padding-top: 1em;
-  padding-bottom: 2.5em;
-  padding-left: min(2.5em, 6.25%);
-  padding-right: min(2.5em, 6.25%);
+  font-family: cozette;
+  font-size: 26px;
+  padding: 20px 50px;
 }
 
 html, body {
@@ -29,17 +47,18 @@ html, body {
 }
 
 body {
-  background-image: url("/assets/img/redsky.png");
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-image: url("/assets/img/stars_bg.png");
+  /* background-repeat: no-repeat; */
   background-attachment: fixed;
   background-position: center;
 }
 
 h1 {
-  font-size: 3em;
-  margin-bottom: 0.25em;
-  text-shadow: 0.0625em 0.0625em var(--color-accent-fg-faint);
+  font-size: 64px;
+  font-family: kiwisoda;
+  font-weight: normal;
+  text-shadow: 4px 4px var(--color-accent-fg-faint);
+  margin: 0px;
 }
 
 h2 {
@@ -54,7 +73,8 @@ h3 {
 }
 
 p {
-  margin-bottom: 0.25em;
+  margin: 0px;
+  margin-bottom: 5px;
 }
 
 ul {
@@ -83,24 +103,9 @@ a {
   font-weight: bold;
 }
 
-@font-face {
-  font-family: "toshibatx";
-  src: url("/assets/fonts/WebPlus_ToshibaTxL2_8x16.woff") format('woff');
-}
-
-@font-face {
-  font-family: "toshibatx";
-  src: url("/assets/fonts/WebPlus_ToshibaTxL1_8x16.woff") format('woff');
-  font-weight: bold;
-}
-
-@font-face {
-  font-family: "nasin-nanpa";
-  src: url("/assets/fonts/nasin-nanpa-4.0.2.otf") format('opentype');
-}
-
 .sitelen-pona {
-  font-family: nasin-nanpa;
+  font-family: lekomajuna;
+  font-size: 24px;
   a {
     text-decoration: none;
   }
