fix scipnet referencing issues #2

--- a/scipnet/style.css
+++ b/scipnet/style.css
@@ -5,7 +5,7 @@
 
 @font-face {
   font-family: "disco";
-  src: url("/projects/scipnet/DigitalDisco.ttf") format('truetype');
+  src: url("/scipnet/DigitalDisco.ttf") format('truetype');
 }
 
 body {
