--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,6 +92,7 @@ h2 {
   font-weight: normal;
   text-shadow: 2px 2px 1px var(--color-accent-fg-faint);
   margin: 0px;
+  margin-top: 13px;
   margin-bottom: 4px;
 }
 
@@ -121,6 +122,7 @@ ul {
 
 a {
   color: var(--color-accent-fg);
+  text-decoration: underline;
   text-decoration-thickness: 1px;
 }
 
@@ -144,7 +146,7 @@ a {
   font-family: lekomajuna;
   font-size: 16px;
   a {
-    text-decoration: none;
+    text-decoration-thickness: 2px;
   }
   ul {
     list-style-type: "\F199C"
